--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -45,9 +45,9 @@
             <% } %>
         </div>
         <div class="col-md-4 mt-5">
-            <div style="font-family: Helvetica, sans-serif; font-weight: 400; font-size: 11px; line-height: 14px; color: #00635d;">
-                items Stephen liked
-            </div>
+            <a href="/likes/list" style="text-decoration: none; font-family: Helvetica, sans-serif; font-weight: 400; font-size: 11px; line-height: 14px; color: #00635d;">
+                items <%= firstName %> liked
+            </a>
         </div>
     </div>
 </div>
