--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -63,8 +63,7 @@
                     <ul class="dropdown-menu me-5" aria-labelledby="userDropdown">
                         <h6 class="dropdown-header" style="font-family: Helvetica, sans-serif; font-weight: 700; font-size: 14px; line-height: 32px; color: #333333;"> <%= firstName %> <%= lastName %></h6>
                         <li><a class="dropdown-item" href="/comments/list" style="font-family: Helvetica, sans-serif; font-weight: 400; font-size: 14px; line-height: 32px; color: #333333;">Comments</a></li>
-
-                        <li><a class="dropdown-item" href="/favorite-genres">Favorite genres</a></li>
+                        <li><a class="dropdown-item" href="/comments/list" style="font-family: Helvetica, sans-serif; font-weight: 400; font-size: 14px; line-height: 32px; color: #333333;">Favorite genres</a></li>
                         <li><a class="dropdown-item" href="/account-settings">Account settings</a></li>
                         <li><a class="dropdown-item" href="/help">Help</a></li>
                         <li><a class="dropdown-item" href="/logout">Sign out</a></li>
