--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -64,7 +64,7 @@
                         <h6 class="dropdown-header" style="font-family: Helvetica, sans-serif; font-weight: 700; font-size: 14px; line-height: 32px; color: #333333;"> <%= firstName %> <%= lastName %></h6>
                         <li><a class="dropdown-item" href="/comments/list" style="font-family: Helvetica, sans-serif; font-weight: 400; font-size: 14px; line-height: 32px; color: #333333;">Comments</a></li>
                         <li><a class="dropdown-item" href="/edit_favorite_genre" style="font-family: Helvetica, sans-serif; font-weight: 400; font-size: 14px; line-height: 32px; color: #333333;">Favorite genres</a></li>
-                        <li><a class="dropdown-item" href="/account-settings">Account settings</a></li>
+                        <li><a class="dropdown-item" href="/account_settings" style="font-family: Helvetica, sans-serif; font-weight: 400; font-size: 14px; line-height: 32px; color: #333333;">Account settings</a></li>
                         <li><a class="dropdown-item" href="/help">Help</a></li>
                         <li><a class="dropdown-item" href="/logout">Sign out</a></li>
                     </ul>
