Added functionality to handle optional 'pages' field in book schema - Modified '/admin/add_book' route to handle optional 'pages' field in request body; Added '/delete_account' route to handle user account deletion, Implemented logic to anonymize user's reviews and comments if requested;

--- a/views/add_book.ejs
+++ b/views/add_book.ejs
@@ -67,7 +67,7 @@
             </div>
             <div class="form-group">
                 <label for="pages">Pages:</label>
-                <input type="number" id="pages" name="pages" class="form-control" required>
+                <input type="number" id="pages" name="pages" class="form-control">
             </div>
             <div class="form-group">
                 <label for="mediaType">Media Type:</label>
