--- a/views/account_settings.ejs
+++ b/views/account_settings.ejs
@@ -46,19 +46,9 @@
                     <input type="file" name="profilePhoto" class="upload-button">
                     <button type="submit" class="upload-button">Upload Photo</button>
                 </form>
-                <div class="delete-account" onclick="confirmDelete()">Delete my account</div>
+                <a href="/delete_account" style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; color: #ff0000;" class="delete-account text-decoration-none">Delete my account</a>
             </div>
         </div>
     </div>
 </div>
-
-
-<script>
-    function confirmDelete() {
-        if (confirm('Are you sure you want to delete your account? This action cannot be undone.')) {
-            window.location.href = '/delete_account';
-        }
-    }
-</script>
-
             
