--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -621,3 +621,125 @@ width: 100%;
     border-radius: 50%;
     object-fit:cover;
 }
+
+/* Book Details */
+
+.description-container{
+    font-family: Arial, sans-serif; 
+    font-weight: 400; 
+    font-size: 16px; 
+    line-height: 22px; 
+    color: #1e1915;
+}
+
+.show-more-link{
+    font-weight: 600; 
+    font-size: 14px; 
+    line-height: 20px; 
+    color: #1e1915;
+}
+
+.book-details-genres{
+    font-family: Arial, sans-serif; 
+    font-weight: 400; 
+    font-size: 14px; 
+    line-height: 18px; 
+    color: #707070;
+}
+
+.genre-link{
+    color: #1e1915; 
+    text-decoration: underline; 
+    text-decoration-color: #409970; 
+    text-decoration-thickness: 2px;
+}
+
+.book-pages-book-media-type{
+    font-family: Arial, sans-serif; 
+    font-weight: 400; 
+    font-size: 14px; 
+    line-height: 18px; 
+    color: #707070;
+}
+
+.book-details-reviews{
+    font-family: Georgia, serif; 
+    font-style: italic; 
+    font-weight: 600; 
+    font-size: 28px; 
+    line-height: 38px; 
+    color: #1e1915;
+}
+
+.what-do-you-think{
+    font-family: Georgia, serif; 
+    font-style: italic; 
+    font-weight: 600; 
+    font-size: 32px; 
+    line-height: 46px; 
+    color: #1e1915;
+}
+
+.write-a-review{
+    background-color: #1e1915; 
+    color: #ffffff; 
+    border-radius: 20%; 
+    width: 50%;
+}
+
+.review-content-short{
+    font-family: Arial, sans-serif; 
+    font-weight: 400; 
+    font-size: 16px; 
+    line-height: 23px; 
+    color: #1e1915;
+}
+
+.review-content-full{
+    display: none; 
+    font-family: Arial, sans-serif; 
+    font-weight: 400; 
+    font-size: 16px; 
+    line-height: 23px; 
+    color: #1e1915;
+}
+
+.book-details-likes-and-comments{
+    font-family: Arial, sans-serif; 
+    font-weight: 400; 
+    font-size: 14px; 
+    line-height: 19px; 
+    color: #707070;
+}
+
+.comment-fullname{
+    font-family: Arial, sans-serif; 
+    font-weight: 700; 
+    font-size: 16px; 
+    line-height: 23px; 
+    color: #1e1915;
+}
+
+.comment-date{
+    font-family: Arial, sans-serif; 
+    font-weight: 400; 
+    font-size: 14px; 
+    line-height: 19px; 
+    color: #707070;
+}
+
+.comment-content-full{
+    display: none; 
+    font-family: Arial, sans-serif; 
+    font-weight: 400; 
+    font-size: 16px; 
+    line-height: 23px; 
+    color: #1e1915;
+}
+
+.comment-submit{
+    background-color: #1e1915; 
+    color: #ffffff; 
+    border-radius: 30%; 
+    display: none;
+}
