moved the book details ejs to book details view directory, moved the book details router to its own controller

--- a/views/bookDetails/book_details.ejs
+++ b/views/bookDetails/book_details.ejs
@@ -1,7 +1,7 @@
-<%- include('layout') %>
+<%- include('../layout') %>
 
 <title><%= title %></title>
-<%- include('navbar') %>
+<%- include('../navbar') %>
 
 <div class="container">
     <div class="row">
