--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -743,3 +743,21 @@ width: 100%;
     border-radius: 30%; 
     display: none;
 }
+
+/* Category */
+
+.category-genre{
+    font-family: Georgia, 'Times New Roman', serif; 
+    font-weight: 700; 
+    font-size: 24px; 
+    line-height: 24px; 
+    color: #382110;
+}
+
+.category-description{
+    font-family: Helvetica, Arial, sans-serif; 
+    font-weight: 400; 
+    font-size: 14px; 
+    line-height: 18px; 
+    color: #181818;
+}
