--- a/views/admin/edit_book_form.ejs
+++ b/views/admin/edit_book_form.ejs
@@ -1,4 +1,4 @@
-<%- include('layout') %>
+<%- include('../layout') %>
 
 <title><%= title %></title>
 
@@ -47,7 +47,7 @@
         </div>
         <div class="form-group">
             <label for="pages">Pages:</label>
-            <input type="number" id="pages" name="pages" class="form-control" value="<%= book.pages %>" required>
+            <input type="number" id="pages" name="pages" class="form-control" value="<%= book.pages %>">
         </div>
         <div class="form-group">
             <label for="mediaType">Media Type:</label>
