moved the edit_genre routers to their own controller; moved the edit_genre views to the admin view directory;

--- a/views/admin/edit_favorite_genres.ejs
+++ b/views/admin/edit_favorite_genres.ejs
@@ -1,8 +1,8 @@
-<%- include('layout') %>
+<%- include('../layout') %>
 
 
 <title><%= title %></title>  
-<%- include('navbar') %>       
+<%- include('../navbar') %>       
     
 <body class="favorite-genre-body">
     
