created genreToggleCheckbox.js for the toggle function shared by the favorite_genre.ejs and edit_favorite_genre.ejs; refractored the favorite-genre.ejs to make it cleaner; moved the favorite-genre.ejs to a Registration directory

--- a/views/edit_favorite_genres.ejs
+++ b/views/edit_favorite_genres.ejs
@@ -1,8 +1,8 @@
-<%- include('../layout') %>
+<%- include('layout') %>
 
 
 <title><%= title %></title>  
-<%- include('../navbar') %>       
+<%- include('navbar') %>       
     
 <body class="favorite-genre-body">
     
@@ -38,27 +38,4 @@
         
     </div>
 
-    <script>
-        function toggleCheckbox(checkboxId) {
-            var checkbox = document.getElementById(checkboxId);
-            checkbox.checked = !checkbox.checked;
-
-            // Check if at least one checkbox is checked
-            var checkboxes = document.querySelectorAll('input[name="genre"]');
-            var checked = Array.from(checkboxes).some(checkbox => checkbox.checked);
-
-            var submitButton = document.getElementById('submitButton');
-            if (checked) {
-                submitButton.classList.remove('favorite-genre-disabled-button');
-                submitButton.classList.add('favorite-genre-enabled-button');
-                submitButton.disabled = false;
-                submitButton.textContent = 'Continue';
-            } else {
-                submitButton.classList.remove('favorite-genre-enabled-button');
-                submitButton.classList.add('favorite-genre-disabled-button');
-                submitButton.disabled = true;
-                submitButton.textContent = 'Select at least one genre to continue';
-            }
-        }
-    </script>
 </body>
