--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -44,5 +44,6 @@
     <script src="/javascript/jwt.js"></script>
     <script src="/javascript/showMoreBookDescription.js"></script>
     <script src="/javascript/adminForm.js"></script>
+    <script src="/javascript/genreToggleCheckbox.js"></script>
 </body>
 </html>
