--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -6,15 +6,15 @@
 <div class="container" style="width: 70%;">
     <div class="row">
         <div class="col-md-8">
-            <div class="mt-3" style="font-family: Georgia, 'Times New Roman', serif; font-weight: 700; font-size: 24px; line-height: 24px; color: #382110;">My Recent Likes</div>
+            <div class="mt-3 recent-likes">My Recent Likes</div>
             <% if (likes.length === 0) { %>
-                <div class="mt-3" style="font-family: Helvetica, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #181818;">
+                <div class="mt-3 no-likes">
                     You have no likes.
                 </div>
             <% } else { %>
                 <% likes.forEach(like => { %>
             <div class="row d-flex align-items-center">
-                <div class="col-2 mt-3" style="font-family: Helvetica, sans-serif; font-weight: 400; font-size: 11px; line-height: 14px; color: #999999;">
+                <div class="col-2 mt-3 like-date">
                     <%= formatDate(like.likeCreatedAt) %>
                 </div>
                 <div class="col-10 mt-3">
