--- a/views/mybooks.ejs
+++ b/views/mybooks.ejs
@@ -23,22 +23,22 @@
                 <div class="col-10">
                     <div class="row">
                         <div class="col-2">
-                            <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
+                            <div class="mybooks-cover">
                                 Cover
                             </div>
                         </div>
                         <div class="col-2">
-                            <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
+                            <div class="mybooks-cover">
                                 Title
                             </div>
                         </div>
                         <div class="col-2">
-                            <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
+                            <div class="mybooks-cover">
                                 Author
                             </div>
                         </div>
                         <div class="col-3">
-                            <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
+                            <div class="mybooks-cover">
                                 Review
                             </div>
                         </div>
@@ -48,7 +48,7 @@
                                 <div class="row">
                                     <% if (books.length === 0) { %>
                                         <div class="col-12">
-                                            <p class="text-center" style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #999999;">
+                                            <p class="text-center mybooks-none">
                                                 You have no books matching "<%= searchQuery %>"
                                             </p>
                                         </div>
@@ -60,38 +60,37 @@
                                         </a>
                                     </div>
                                     <div class="col-2">
-                                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #00635d;">
+                                        <div class="mybooks-title">
                                             <a href="/book/<%= book._id %>/details" style="color: inherit; text-decoration: none;">
                                                 <%= book.title %>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="col-2">
-                                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #00635d;">
+                                        <div class="mybooks-title">
                                             <%= book.author %>
                                         </div>
                                     </div>
                                     <div class="<%= isOwner ? 'col-5' : 'col-6' %>">
                                         <div class="review-container">
-                                            <div class="mt-2 review-content-short" style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #181818;">
+                                            <div class="mt-2 review-content-short">
                                                 <% if (book.userReview) { %>
                                                     <%- book.userReview.truncatedContent %>
                                                     <div class="show-more-button">
-                                                        <a style="font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;" class="text-decoration-none show-more-link" data-review-id="<%= book.userReview._id %>" data-book-id="<%= book._id %>" href="#">
+                                                        <a class="text-decoration-none show-more-link" data-review-id="<%= book.userReview._id %>" data-book-id="<%= book._id %>" href="#">
                                                             Show more &#9662;
                                                         </a>
                                                     </div>
                                                 <% } else { %>
-                                                    <!-- Display a message or handle this case as per your requirements -->
                                                     <p>No review available</p>
                                                 <% } %>
                                             </div>
-                                            <div class="mt-2 review-content-full" style="display: none; font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #181818;"></div>
+                                            <div class="mt-2 review-content-full"></div>
                                         </div>
                                     </div>
                                     <% if (isOwner) { %>
                                     <div class="col-1">
-                                        <div style="cursor: pointer; font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
+                                        <div class="isOwner">
                                             <i class="bi bi-x-lg fs-1 delete-review" data-review-id="<%= book.userReview ? book.userReview._id : '' %>" data-book-title="<%= book.title %>" data-book-id="<%= book._id %>"></i>
                                         </div>
                                     </div>
